<resources>
    <string name="app_name">EDango</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="IntroTitle">"EDango Shopping\nProvide the best\nAt your service "</string>
    <string name="IntroSubtitle">Any time, any where\nWith just one swipe</string>
    <string name="LoginSubtitle">Don\'t have an account yet?</string>
    <string name="LoginSubtitle2">Sign up here.</string>
    <string name="startButtonText">Start</string>
    <string name="btnRegText">Sign up</string>
    <string name="btnLoginText">Login</string>
    <string name="ForgotTitle">Forgot password</string>
    <string name="LoginTitle">Sign in</string>
    <string name="ShowPasswordTitle">Show password</string>
    <string name="ResetSubtitle">We will send you the password reset instruction to your email.\nIf you don\'t see it, please check your spam folder.</string>
    <string name="ResetTitle">Reset Password</string>
    <string name="btnResetText">Send</string>
    <string name="btnBackText">Back</string>
    <string name="default_web_client_id">285721036732-4q86fpr0s8q5me43b80gipfjsap9pf3g.apps.googleusercontent.com</string>
    <string name="searchbar_product">Search Product...</string>
</resources>