<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvIntroTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            app:layout_constraintTop_toBottomOf="@id/Logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/IntroTitle"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterOption"
            android:layout_width="@dimen/optionButtonWidth"
            android:layout_height="@dimen/optionButtonHeight"
            android:text="@string/btnRegText"
            android:textColor="@color/black"
            android:layout_marginBottom="120dp"
            style="@style/blueButtonStyle"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/tvIntroTitle"
            app:layout_constraintStart_toStartOf="@id/tvIntroTitle"
            app:layout_constraintEnd_toEndOf="@id/tvIntroTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginOption"
            android:layout_width="@dimen/optionButtonWidth"
            android:layout_height="@dimen/optionButtonHeight"
            android:text="@string/btnLoginText"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            style="@style/whiteButtonStyle"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@id/tvIntroTitle"
            app:layout_constraintStart_toStartOf="@id/tvIntroTitle"
            app:layout_constraintEnd_toEndOf="@id/tvIntroTitle"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>