<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_corner_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftCorner"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_corner_right"
        android:layout_marginEnd="-4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftCorner" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@id/guidelineCircleBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelineCircleRight"
        app:layout_constraintStart_toStartOf="@id/guidelineCircleLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineCircleTop" />

    <TextView
        android:id="@+id/tvIntroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h3"
        app:layout_constraintStart_toStartOf="@id/circle"
        app:layout_constraintEnd_toEndOf="@id/circle"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftCorner"
        app:layout_constraintBottom_toBottomOf="@id/circle"
        android:text="@string/IntroTitle"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/tvIntroSubtitle"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/IntroSubtitle"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/tvIntroTitle"
        app:layout_constraintStart_toStartOf="@id/tvIntroTitle"
        app:layout_constraintTop_toBottomOf="@id/tvIntroTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="@dimen/startButtonWidth"
        android:layout_height="@dimen/startButtonHeight"
        android:text="@string/startButtonText"
        android:textColor="@color/black"
        style="@style/blueButtonStyle"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/tvIntroSubtitle"
        app:layout_constraintStart_toStartOf="@id/tvIntroSubtitle"
        app:layout_constraintEnd_toEndOf="@id/tvIntroSubtitle"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftCorner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCircleLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCircleRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCircleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCircleBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>
</androidx.constraintlayout.widget.ConstraintLayout>